# neobrutal-bar-cpp

./: .gitignore  CMakeLists.txt  README.md  config.example.json  resources.qrc
.github/workflows/: build.yml
assets/data/: tabler_glyphs.json
scripts/: gen_glyph_map.py  rename_fonts.py
src/: Config.cpp  Config.h  Icons.cpp  Icons.h  Theme.cpp  Theme.h  Types.h  main.cpp
src/providers/: MediaProvider.cpp  MediaProvider.h  MediaProvider_linux.cpp  MediaProvider_win.cpp  Provider.cpp  Provider.h  SystemInfo.cpp  SystemInfo.h  SystemInfo_linux.cpp  SystemInfo_win.cpp  WeatherProvider.cpp  WeatherProvider.h  WorkspaceProvider.cpp  WorkspaceProvider.h  WorkspaceProvider_linux.cpp  WorkspaceProvider_win.cpp
src/widgets/: AppIconMap.cpp  AppIconMap.h  Bar.cpp  Bar.h  Meter.cpp  Meter.h  NeoButton.cpp  NeoButton.h  NeoFrame.cpp  NeoFrame.h  NowPlaying.cpp  NowPlaying.h  UiHelpers.cpp  UiHelpers.h  Workspaces.cpp  Workspaces.h
